storage/ndb/src/kernel/blocks/dblqh/Dblqh.hpp
@@ -2163,6 +2163,7 @@ private:
   void execTRANSID_AI(Signal* signal);
   void execINCL_NODEREQ(Signal* signal);
 
+  void force_lcp(Signal* signal);
   void execLCP_FRAG_ORD(Signal* signal);
   void execEMPTY_LCP_REQ(Signal* signal);
   
@@ -2754,6 +2755,9 @@ private:
 // ------------------------------------------------------------------------
   Uint32 c_lcpId;
   Uint32 cnoOfFragsCheckpointed;
+  Uint32 c_last_force_lcp_time;
+  Uint32 c_free_mb_force_lcp_limit; // Force lcp when less than this free mb
+  Uint32 c_free_mb_tail_problem_limit; // Set TAIL_PROBLEM when less than this..
 
 /* ------------------------------------------------------------------------- */
 // cmaxWordsAtNodeRec keeps track of how many words that currently are
